k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: flavienb/icons-visualizer-nginx:latest
          name: nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nginx
status:
  loadBalancer: {}
