k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: icons-visualizer
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: minio
    spec:
      containers:
        - image: minio/minio:RELEASE.2021-03-17T02-33-02Z
          name: minio
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /icons
              name: minio-pvc
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: minio-pvc
          persistentVolumeClaim:
            claimName: minio-pvc
            readOnly: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: minio
  namespace: icons-visualizer
  name: minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: minio
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: minio
  name: minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: minio
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  rules:
  - host: minio.15abd9b3-0e5a-488d-bd4f-f1ba171102d1.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
